Fix table align

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -19,12 +19,14 @@
     @apply text-xs h-12 px-4 text-gray-500 font-semibold bg-gray-50 border-b border-t border-gray-300 text-left align-middle;
   }
 
+  table th > * {
+    vertical-align : middle;
+  }
+
   table th .state-sort {
     @apply ml-1 w-4 h-4 text-gray-400;
   }
-  table th.is-sortable {
-    @apply flex items-center;
-  }
+
   table th.is-active {
     @apply text-black;
   }
